--- a/services/bluetooth/hardware/BUILD.gn
+++ b/services/bluetooth/hardware/BUILD.gn
@@ -14,6 +14,9 @@
 import("//build/ohos.gni")
 import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
 
+SUBSYSTEM_DIR = "//foundation/communication"
+PART_DIR = "$SUBSYSTEM_DIR/bluetooth_service/services/bluetooth"
+
 ohos_shared_library("bluetooth_hdi_adapter") {
   # sanitize = {
   #   cfi = true
@@ -22,6 +25,7 @@ ohos_shared_library("bluetooth_hdi_adapter") {
   include_dirs = [
     "include",
     "//third_party/bounds_checking_function/include",
+    "$PART_DIR/common",
   ]
 
   cflags = [ "-fPIC" ]
