--- a/services/bluetooth/stack/BUILD.gn
+++ b/services/bluetooth/stack/BUILD.gn
@@ -196,6 +196,7 @@ config("btstack_config") {
     "./",
     "src",
     "platform/include",
+    "$PART_DIR/common",
     "$PART_DIR/hardware/include",
   ]
 
