--- a/test/unittest/spp/BUILD.gn
+++ b/test/unittest/spp/BUILD.gn
@@ -28,7 +28,7 @@ config("module_private_config") {
     "//third_party/json/include",
     "//commonlibrary/c_utils/base/include",
     "//utils/system/safwk/native/include",
-    "//foundation/communication/bluetooth/frameworks/inner/common",
+    "//foundation/communication/bluetooth/frameworks/inner/include",
   ]
   defines = [
     "BTFW_LOG_TAG = \"bluetooth_test\"",
@@ -52,7 +52,7 @@ ohos_unittest("btfw_spp_test") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "resource_management:global_resmgr"
+    "resource_management:global_resmgr",
   ]
 }
 
