--- a/test/unittest/gatt/BUILD.gn
+++ b/test/unittest/gatt/BUILD.gn
@@ -31,7 +31,7 @@ config("module_private_config") {
     "//commonlibrary/c_utils/base/include",
     "//utils/system/safwk/native/include",
     "//foundation/communication/bluetooth/interfaces/inner_api/include",
-    "//foundation/communication/bluetooth/frameworks/inner/common",
+    "//foundation/communication/bluetooth/frameworks/inner/include",
   ]
   defines = [
     "BTFW_LOG_TAG = \"bluetooth_test\"",
@@ -56,7 +56,7 @@ ohos_unittest("btfw_gatt_service_unit_test") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "resource_management:global_resmgr"
+    "resource_management:global_resmgr",
   ]
 }
 
@@ -77,7 +77,7 @@ ohos_unittest("btfw_gatt_client_unit_test") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "resource_management:global_resmgr"
+    "resource_management:global_resmgr",
   ]
 }
 
@@ -99,7 +99,7 @@ ohos_unittest("btfw_gatt_server_unit_test") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "resource_management:global_resmgr"
+    "resource_management:global_resmgr",
   ]
 }
 
@@ -120,7 +120,7 @@ ohos_unittest("btfw_gatt_manager_unit_test") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "resource_management:global_resmgr"
+    "resource_management:global_resmgr",
   ]
 }
 
@@ -142,7 +142,7 @@ ohos_unittest("btfw_gatt_descriptor_unit_test") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "resource_management:global_resmgr"
+    "resource_management:global_resmgr",
   ]
 }
 
@@ -165,7 +165,7 @@ ohos_unittest("btfw_gatt_characteristic_unit_test") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "resource_management:global_resmgr"
+    "resource_management:global_resmgr",
   ]
 }
 
