--- a/test/unittest/host/BUILD.gn
+++ b/test/unittest/host/BUILD.gn
@@ -29,7 +29,7 @@ config("module_private_config") {
     "//third_party/json/include",
     "//third_party/bounds_checking_function/include",
     "//utils/system/safwk/native/include",
-    "//foundation/communication/bluetooth/frameworks/inner/common",
+    "//foundation/communication/bluetooth/frameworks/inner/include",
   ]
   defines = [
     "BTFW_LOG_TAG = \"bluetooth_test\"",
@@ -56,7 +56,7 @@ ohos_unittest("btfw_host_unit_test") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "resource_management:global_resmgr"
+    "resource_management:global_resmgr",
   ]
 }
 
