--- a/services/bluetooth/etc/init/bluetooth_service.cfg
+++ b/services/bluetooth/etc/init/bluetooth_service.cfg
@@ -17,7 +17,10 @@
             "uid" : "bluetooth",
             "gid" : ["bluetooth", "shell"],
             "caps" : ["CAP_NET_ADMIN"],
-	    "secon" : "u:r:bluetooth_service:s0"
+	        "secon" : "u:r:bluetooth_service:s0",
+            "permission" : [
+                "ohos.permission.ANSWER_CALL"
+            ]
         }
     ]
 }
