Change BUILD.gn include
Signed-off-by: lee <lilong32@huawei.com>
Change-Id: Id78a7f29c5d842ed319555639d3fa0e1bb4be9a9

--- a/services/bluetooth/stack/BUILD.gn
+++ b/services/bluetooth/stack/BUILD.gn
@@ -184,11 +184,7 @@ StackSmpSrc = [
 ]
 
 config("btstack_public_config") {
-  include_dirs = [
-    "include",
-    "//third_party/openssl/include",
-    "//third_party/bounds_checking_function/include",
-  ]
+  include_dirs = [ "include" ]
 }
 
 config("btstack_config") {
