Signed-off-by:dengguanghong <2228266166@qq.com>

--- a/services/bluetooth/service/BUILD.gn
+++ b/services/bluetooth/service/BUILD.gn
@@ -351,6 +351,9 @@ ohos_shared_library("btservice") {
     "common_event_service:cesfwk_innerkits",
     "core_service:tel_core_service_api",
     "hdf_core:libhdi",
+    "hdf_core:libhdf_ipc_adapter",
+    "hdf_core:libhdf_utils",
+    "hdf_core:libpub_utils",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
     "ipc:ipc_core",
