--- a/services/bluetooth/server/BUILD.gn
+++ b/services/bluetooth/server/BUILD.gn
@@ -105,6 +105,7 @@ ohos_shared_library("bluetooth_server") {
   ]
 
   external_deps = [
+    "ability_base:base",
     "access_token:libaccesstoken_sdk",
     "bluetooth:btcommon",
     "c_utils:utils",
