feat: 消除ability_ability_base模块中base中all_dependent_configs Issue: https://gitee.com/openharmony/ability_ability_base/issues/IADHMG?from=project-issue Comment: 消除ability_ability_base模块base中all_dependent_configs
Signed-off-by: jiangzhijun8 <jiangzhijun7@huawei.com>

--- a/test/moduletest/BUILD.gn
+++ b/test/moduletest/BUILD.gn
@@ -57,7 +57,7 @@ ohos_moduletest("btsvr_module_test") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "resource_management:global_resmgr"
+    "resource_management:global_resmgr",
   ]
 }
 
