--- a/services/bluetooth/BUILD.gn
+++ b/services/bluetooth/BUILD.gn
@@ -14,7 +14,5 @@
 import("//build/lite/config/component/lite_component.gni")
 
 lite_component("bluetooth") {
-  deps = [
-    "$ohos_board_adapter_dir/hals/communication/bluetooth_service/services:btservice",
-  ]
+  deps = [ "$ohos_board_adapter_dir/hals/communication/bluetooth_service/services:btservice" ]
 }
