--- a/bluetooth.gni
+++ b/bluetooth.gni
@@ -15,7 +15,7 @@ declare_args() {
   bluetooth_service_a2dp_sink_feature = false
   bluetooth_service_a2dp_source_feature = true
   bluetooth_service_avrcp_ct_feature = true
-  bluetooth_service_avrcp_tg_feature = false
+  bluetooth_service_avrcp_tg_feature = true
   bluetooth_service_hfp_ag_feature = true
   bluetooth_service_hfp_hf_feature = false
   bluetooth_service_hid_host_feature = true
