--- a/bluetooth.gni
+++ b/bluetooth.gni
@@ -16,7 +16,16 @@ declare_args() {
   bluetooth_service_a2dp_source_feature = true
   bluetooth_service_avrcp_ct_feature = true
   bluetooth_service_avrcp_tg_feature = false
-  bluetooth_service_hfp_ag_feature = true
+
+  if (defined(global_parts_info) &&
+    !defined(global_parts_info.telephony_call_manager) ||
+    !defined(global_parts_info.telephony_core_service) ||
+    !defined(global_parts_info.telephony_state_registry)) {
+    bluetooth_service_hfp_ag_feature = false
+  } else {
+    bluetooth_service_hfp_ag_feature = true
+  }
+
   bluetooth_service_hfp_hf_feature = false
   bluetooth_service_hid_host_feature = true
   bluetooth_service_pan_feature = false
