Signed-off-by:dengguanghong <2228266166@qq.com>

--- a/bluetooth.gni
+++ b/bluetooth.gni
@@ -17,8 +17,8 @@ declare_args() {
   bluetooth_service_avrcp_ct_feature = true
   bluetooth_service_avrcp_tg_feature = false
 
-  if (defined(global_parts_info) &&
-      !defined(global_parts_info.telephony_call_manager) ||
+  if ((defined(global_parts_info) &&
+       !defined(global_parts_info.telephony_call_manager)) ||
       !defined(global_parts_info.telephony_core_service) ||
       !defined(global_parts_info.telephony_state_registry)) {
     bluetooth_service_hfp_ag_feature = false
