--- a/bluetooth.gni
+++ b/bluetooth.gni
@@ -20,7 +20,9 @@ declare_args() {
   bluetooth_service_hid_host_feature = true
   bluetooth_service_pan_feature = false
 
-  if (defined(global_parts_info) &&
+  if ((defined(global_parts_info) &&
+       !defined(global_parts_info.telephony_call_manager)) ||
+      !defined(global_parts_info.telephony_core_service) ||
       !defined(global_parts_info.telephony_state_registry)) {
     bluetooth_service_hfp_ag_feature = false
   } else {
