--- a/services/bluetooth/service/BUILD.gn
+++ b/services/bluetooth/service/BUILD.gn
@@ -172,10 +172,15 @@ config("btservice_config") {
     "$BT_SERVICE_DIR/src/ble/ble_scan_filter",
     "$BT_SERVICE_DIR/src/gavdp/a2dp_codec/aaccodecctrl_l2/include",
     "$BT_SERVICE_DIR/src/gavdp/a2dp_codec/sbccodecctrl/include",
-    "//base/telephony/state_registry/frameworks/native/observer/include",
     "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
     "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager/include",
   ]
+
+  if (bluetooth_service_hfp_ag_feature) {
+    include_dirs += [
+      "//base/telephony/state_registry/frameworks/native/observer/include",
+    ]
+  }
 
   cflags_cc = [
     "-fPIC",
@@ -423,16 +428,21 @@ ohos_shared_library("btservice") {
     "audio_framework:audio_client",
     "bluetooth:btcommon",
     "c_utils:utils",
-    "call_manager:tel_call_manager_api",
     "common_event_service:cesfwk_innerkits",
-    "core_service:tel_core_service_api",
     "hdf_core:libhdi",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
-    "state_registry:tel_state_registry_api",
   ]
+
+  if (bluetooth_service_hfp_ag_feature) {
+    external_deps += [
+      "call_manager:tel_call_manager_api",
+      "core_service:tel_core_service_api",
+      "state_registry:tel_state_registry_api",
+    ]
+  }
 
   if (bluetooth_service_avrcp_avsession) {
     external_deps += [
