--- a/services/bluetooth/service/BUILD.gn
+++ b/services/bluetooth/service/BUILD.gn
@@ -173,9 +173,8 @@ config("btservice_config") {
   ]
 
   if (bluetooth_service_hfp_ag_feature) {
-    include_dirs += [
-      "//base/telephony/state_registry/frameworks/native/observer/include",
-    ]
+    include_dirs +=
+        [ "//base/telephony/state_registry/frameworks/native/observer/include" ]
   }
 
   cflags_cc = [
