--- a/services/bluetooth/service/BUILD.gn
+++ b/services/bluetooth/service/BUILD.gn
@@ -348,6 +348,7 @@ ohos_shared_library("btservice") {
     "hilog:libhilog",
     "hisysevent:libhisysevent",
     "ipc:ipc_core",
+    "jsoncpp:jsoncpp",
     "samgr:samgr_proxy",
   ]
 
