Permission verification （cherry picked commit from <gitee.com//openharmony/communication_bluetooth_service/commit/1f67ff6658540f1364a00c59ed3f679de4b7f4f6>
Signed-off-by: hui <lizhihui10@huawei.com>

--- a/services/bluetooth/ipc/BUILD.gn
+++ b/services/bluetooth/ipc/BUILD.gn
@@ -28,7 +28,10 @@ ohos_static_library("btipc_service") {
   # }
   stack_protector_ret = true
   public_configs = [ ":btipc_public_config" ]
-  include_dirs = [ "$SUBSYSTEM_DIR/bluetooth/frameworks/inner/include" ]
+  include_dirs = [
+    "$SUBSYSTEM_DIR/bluetooth_service/services/bluetooth/service/src/permission",
+    "$SUBSYSTEM_DIR/bluetooth/frameworks/inner/include",
+  ]
   sources = [
     "src/bluetooth_ble_advertise_callback_proxy.cpp",
     "src/bluetooth_ble_advertiser_stub.cpp",
@@ -107,6 +110,7 @@ ohos_static_library("btipc_service") {
   deps = []
 
   external_deps = [
+    "access_token:libaccesstoken_sdk",
     "bluetooth:btcommon",
     "c_utils:utils",
     "hilog:libhilog",
