--- a/services/bluetooth/service/BUILD.gn
+++ b/services/bluetooth/service/BUILD.gn
@@ -19,7 +19,7 @@ PART_DIR = "$SUBSYSTEM_DIR/bluetooth_service/services/bluetooth"
 BT_SERVICE_DIR = "$PART_DIR/service"
 
 declare_args() {
-  bluetooth_service_avrcp_avsession = false
+  bluetooth_service_avrcp_avsession = true
 }
 
 ServiceBleScanFilter = [ "src/ble/ble_scan_filter/src/ble_scan_filter_lsf.cpp" ]
@@ -261,6 +261,7 @@ ohos_shared_library("btservice") {
       "src/avrcp_tg/avrcp_tg_sub_unit_info.cpp",
       "src/avrcp_tg/avrcp_tg_unit_info.cpp",
       "src/avrcp_tg/avrcp_tg_vendor.cpp",
+      "src/avrcp_tg/avrcp_tg_volume_interface.cpp",
     ]
   }
 
@@ -344,7 +345,10 @@ ohos_shared_library("btservice") {
     "bluetooth:btcommon",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "hdf_core:libhdf_ipc_adapter",
+    "hdf_core:libhdf_utils",
     "hdf_core:libhdi",
+    "hdf_core:libpub_utils",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
     "ipc:ipc_core",
@@ -364,7 +368,7 @@ ohos_shared_library("btservice") {
       "ability_runtime:wantagent_innerkits",
       "av_session:avsession_client",
       "input:libmmi-client",
-      "multimedia_image_framework:image_native",
+      "image_framework:image_native",
     ]
   }
 
