蓝牙弹窗功能增强
Signed-off-by: wangweiyuan <wangweiyuan2@huawei.com>

--- a/services/bluetooth/service/BUILD.gn
+++ b/services/bluetooth/service/BUILD.gn
@@ -63,6 +63,13 @@ ServiceCommonSrc = [
   "src/common/sys_state_machine.cpp",
 ]
 
+ServiceDialogSrc = [
+  "src/dialog/bluetooth_ability_connection.cpp",
+  "src/dialog/bluetooth_dialog.cpp",
+  "src/dialog/dialog_pair.cpp",
+  "src/dialog/dialog_switch.cpp",
+]
+
 ServiceGattSrc = [
   "src/gatt/gatt_cache.cpp",
   "src/gatt/gatt_client_profile.cpp",
@@ -145,6 +152,7 @@ ServiceUtilSrc = [
 ServicePermissionSrc = [
   "src/permission/auth_center.cpp",
   "src/permission/permission_helper.cpp",
+  "src/permission/permission_manager.cpp",
   "src/permission/permission_utils.cpp",
 ]
 
@@ -213,6 +221,7 @@ ohos_shared_library("btservice") {
   sources += ServiceBleScanFilter
   sources += ServiceBleSrc
   sources += ServiceClassicSrc
+  sources += ServiceDialogSrc
   sources += ServiceGattSrc
   sources += ServiceGavdpSrc
   sources += ServiceObexSrc
@@ -338,6 +347,8 @@ ohos_shared_library("btservice") {
 
   external_deps = [
     "ability_base:want",
+    "ability_runtime:ability_connect_callback_stub",
+    "ability_runtime:extension_manager",
     "access_token:libaccesstoken_sdk",
     "access_token:libtokenid_sdk",
     "audio_framework:audio_client",
